fix whitespace gap as per G

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
@@ -453,7 +453,7 @@
 				content: '';
 				position: absolute;
 				left: 0;
-				bottom: -32px;
+				bottom: -33px;
 				height: 5px;
 				display: block;
 				width: 100%;
